--- a/css/default_style.css
+++ b/css/default_style.css
@@ -5,18 +5,37 @@ body{
   background-color:#f4f4f4;
 }
 
-/* global */
-.container{
-  width:80%;
-  margin:auto;
-  overflow:hidden;
-  position:relative;
-}
-
 ul{
   margin:0;
   padding:0;
 }
+
+
+@media screen 
+  and (min-width: 1000px) { 
+  /* global */
+  .container{
+    width:60%;
+    margin:auto;
+    overflow:hidden;
+    position:relative;
+  }
+}
+
+@media screen 
+  and (max-width: 1001px) { 
+  /* global */
+  .container{
+    width:80%;
+    margin:auto;
+    overflow:hidden;
+    position:relative;
+  }
+}
+
+
+
+
 
 /* header */
 header{
@@ -73,7 +92,7 @@ footer{
   background-color:#4c4c4c;
 }
 footer .contact{
-  width:80%;
+  width:100%;
   margin:auto;
 }
 
