--- a/css/about/showcase.css
+++ b/css/about/showcase.css
@@ -3,10 +3,15 @@
   box-sizing: border-box;
   max-width: 100%;
   margin:auto;
+  margin-top:4%;
   }
 
+.showcasetext {
+  padding: 0% 8% 0% 0%;
+}
+
 @media screen 
-  and (min-width: 1000px) { 
+  and (min-width: 1081px) { 
   /* Desctiption of each image*/
   .imgcontent{
     margin: 0 auto;
@@ -16,12 +21,18 @@
     background: rgba(0, 0, 0, 0.5); /* Black background with 0.5 opacity */
     color: #f1f1f1; /* Grey text */
     width: 100%; /* Full width */
-    padding: 20px; /* Some padding */
+    padding: 5px 30px 5px 30px; /* Some padding */
+  }
+  /* intro */
+  #intro {
+    padding:2% 5% 2% 0%;
+    font-size:18px;
+    text-align: justify;
   }
 }
 
 @media screen 
-  and (max-width: 1001px) { 
+  and (max-width: 1080px) { 
   .imgcontent{
     margin: 0 auto;
     top: 0%; /* At the bottom. Use top:0 to append it to the top */
@@ -30,10 +41,16 @@
     background: rgba(0, 0, 0, 0.5); /* Black background with 0.5 opacity */
     color: #f1f1f1; /* Grey text */
     width: 100%; /* Full width */
-    padding: 5%; /* Some padding */
+    padding: 5px 20px 5px 20px; /* Some padding */
   }
   .imgcontent, .h1, .p{
-      font-size:75%;
+      font-size:80%;
+  }
+  /* intro */
+  #intro {
+    padding:2% 6% 2% 0%;
+    font-size:16px;
+    text-align: justify;
   }
 }
 
@@ -107,6 +124,14 @@
   opacity: 1;
 }
 
+
+/* intro */
+#profilepic {
+  max-width: 40%;
+  float: left;
+  padding: 0% 8% 0% 0%;
+  
+}
 
 
 
