--- a/css/default_style.css
+++ b/css/default_style.css
@@ -1,8 +1,8 @@
 body{
-  font:15px/1.5 Arial, Helvetica, can-serif;
+  font:15px/1.5 Helvetica, san-serif;
   padding:0;
   margin:0;
-  background-color:#f4f4f4;
+  background-color:#f2f2f2;
 }
 
 ul{
@@ -12,10 +12,11 @@ ul{
 
 
 @media screen 
-  and (min-width: 1000px) { 
+  and (min-width: 1081px) { 
   /* global */
   .container{
     width:60%;
+    max-width:1000px;
     margin:auto;
     overflow:hidden;
     position:relative;
@@ -23,7 +24,7 @@ ul{
 }
 
 @media screen 
-  and (max-width: 1001px) { 
+  and (max-width: 1080px) { 
   /* global */
   .container{
     width:80%;
