--- a/css/default_style.css
+++ b/css/default_style.css
@@ -42,9 +42,22 @@ ul{
 header{
   background:#4c4c4c;
   color:#ffffff;
-  padding-top:30px;
   min-height:70px;
   border-bottom:#026f72 5px solid;
+  padding-bottom:10px;
+}
+
+header #branding h1{
+  text-align: center;
+}
+
+header ul{
+  text-align:center;
+}
+
+header li{
+  display:inline;
+  margin:1% 2% 1% 2%;
 }
 
 header a{
@@ -52,25 +65,7 @@ header a{
   text-decoration: none!important;
   text-transform:uppercase;
   font-size:16px;
-}
-
-header li{
-  float:left;
-  display:inline;
-  padding:0 20px 0 20px;
-}
-
-header #branding{
-  float:left;
-}
-
-header #branding h1{
-  margin:0;
-}
-
-header nav{
-  float:right;
-  margin-top:10px;
+  margin-bottom:1px;
 }
 
 header .highlight, header .current a{
