--- a/css/default_style.css
+++ b/css/default_style.css
@@ -92,10 +92,22 @@ footer{
   background-color:#4c4c4c;
 }
 footer .contact{
-  width:100%;
+  float: left;
+	width:50%;
   margin:auto;
 }
-
+#icons img{
+	float:right;
+	width:40px;
+	padding: 0px 5px 5px 5px;
+	opacity: 1;
+}
+#icons img:hover{
+	float:right;
+	width:40px;
+	padding: 0px 5px 5px 5px;
+	opacity: 0.5;
+}
 
 
 
