--- a/css/default_style.css
+++ b/css/default_style.css
@@ -15,6 +15,21 @@ ul{
 @media screen 
   and (min-width: 1081px) { 
   /* global */
+	header #branding h1{
+		float:left;
+  	text-align: center;
+		line-height:0%;
+		padding:40px 5px 40px 5px;
+	}
+	#topicons img{
+		float:right;
+		width:40px;
+		padding: 40px 5px 40px 5px;
+		opacity: 1;
+	}
+	#topicons img:hover{
+		opacity: 0.5;
+	}
   .container{
     width:60%;
     max-width:1000px;
@@ -27,6 +42,21 @@ ul{
 @media screen 
   and (max-width: 1080px) { 
   /* global */
+	header #branding h1{
+		float:left;
+  	text-align: center;
+		line-height:0%;
+		padding:20px 5px 20px 5px;
+	}
+	#topicons img{
+		float:right;
+		width:40px;
+		padding: 20px 5px 40px 5px;
+		opacity: 1;
+	}
+	#topicons img:hover{
+		opacity: 0.5;
+	}
   .container{
     width:80%;
     margin:auto;
@@ -35,6 +65,21 @@ ul{
   }
 }
 
+@media screen 
+  and (max-width: 600px) { 
+  /* global */
+	header #branding h1{
+  	text-align: center;
+	}
+	#topicons img{
+		width:40px;
+		padding: 5px 5px 5px 5px;
+		opacity: 1;
+	}
+	#topicons img:hover{
+		opacity: 0.5;
+	}
+}
 
 
 
@@ -46,10 +91,6 @@ header{
   min-height:70px;
   border-bottom:#026f72 5px solid;
   padding-bottom:10px;
-}
-
-header #branding h1{
-  text-align: center;
 }
 
 header ul{
@@ -80,9 +121,24 @@ header a:hover{
 }
 
 
+
 /* main content */
+.centered{
+	text-align:center
+}
 .light{
 	color:#6f6f6f;
+}
+.img_caption{
+	text-align:center;
+	line-height:0%;
+}
+.regular{
+	display: block;
+  margin-left: auto;
+  margin-right: auto;
+	width:80%;
+	height:450px;
 }
 
 
