--- a/css/showcase_about.css
+++ b/css/showcase_about.css
@@ -3,7 +3,7 @@
   box-sizing: border-box;
   max-width: 100%;
   margin:auto;
-  margin-top:0%;
+  margin-top:4%;
   }
 
 
@@ -17,6 +17,17 @@
 @media screen 
   and (min-width: 1081px) { 
   /* Desctiption of each image*/
+  .imgcontent{
+    margin: 0 auto;
+    position: Absolute; /* Position the background text */
+    top: 60%; /* At the bottom. Use top:0 to append it to the top */
+    background: rgb(0, 0, 0); /* Fallback color */
+    background: rgba(0, 0, 0, 0.5); /* Black background with 0.5 opacity */
+    color: #f1f1f1; /* Grey text */
+    width: 100%; /* Full width */
+    padding: 5px 30px 5px 30px; /* Some padding */
+  }
+  /* intro */
   #intro {
     padding:2% 5% 2% 0%;
     font-size:18px;
@@ -32,6 +43,20 @@
 
 @media screen 
   and (max-width: 1080px) { 
+  .imgcontent{
+    margin: 0 auto;
+    top: 0%; /* At the bottom. Use top:0 to append it to the top */
+    position: absolute; /* Position the background text */
+    background: rgb(0, 0, 0); /* Fallback color */
+    background: rgba(0, 0, 0, 0.5); /* Black background with 0.5 opacity */
+    color: #f1f1f1; /* Grey text */
+    width: 100%; /* Full width */
+    padding: 5px 20px 5px 20px; /* Some padding */
+  }
+  .imgcontent, .h1, .p{
+      font-size:80%;
+  }
+  /* intro */
   #intro {
     padding:2% 6% 2% 0%;
     font-size:16px;
@@ -51,12 +76,17 @@
   display: none;   
 }
 
+/* Add a pointer when hovering over the thumbnail images */
+.cursor {
+  cursor: pointer;
+}
+
 /* Next & previous buttons */
 .prev,
 .next {
   cursor: pointer;
   position: absolute;
-  top: 50%;
+  top: 40%;
   width: auto;
   padding: 16px;
   margin-top: -50px;
@@ -83,7 +113,7 @@
 /* Number text (1/3 etc) */
 .numbertext {
   color: #f2f2f2;
-  font-size: 16px;
+  font-size: 12px;
   padding: 8px 12px;
   position: absolute;
   top: 0;
