--- a/css/lightbox.css
+++ b/css/lightbox.css
@@ -1,3 +1,115 @@
+/*expandable img*/
+img.hover-shadow {
+	width:100%;
+  transition: 0.3s;
+}
+.hover-shadow:hover {
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+	cursor: pointer;
+	opacity:0.8;
+	transition: 0.3s;
+}
+
+
+@media screen 
+  and (min-width: 1081px) {
+	.column_lightbox {
+		float:left;
+		width: 48%;
+	}
+	.column_lightbox img{
+		height: 250px;
+		object-fit: cover;
+	}
+		
+	/* The Modal (background) */
+	.modal {
+		display: none;
+		position: fixed;
+		z-index: 1;
+		padding-top: 2.5%;
+		left: 0;
+		top: 0;
+		width: 100%;
+		height: 100%;
+		overflow: auto;
+		background-color: black;
+	}
+
+	/* Modal Content */
+	.modal-content {
+		position: relative;
+		margin: auto;
+		width: 90%;
+		max-width:900px;
+	}
+	.modal-content img{
+		width:100%;
+	}
+		
+	/*single image clickable*/
+	.single img{
+		display: block;
+		margin-left: auto;
+		margin-right: auto;
+		width:60%;
+		height:350px;
+		object-fit: cover;
+	}
+}
+
+
+
+@media screen 
+  and (max-width: 1080px) {
+	.column_lightbox {
+		float:left;
+		width: 48%;
+	}
+
+	.column_lightbox img{
+		height: 175px;
+		object-fit: cover;
+	}
+		
+	/* The Modal (background) */
+	.modal {
+		display: none;
+		position: fixed;
+		z-index: 1;
+		padding-top: 12%;
+		left: 0;
+		top: 0;
+		width: 100%;
+		height: 100%;
+		overflow: auto;
+		background-color: black;
+	}
+
+	/* Modal Content */
+	.modal-content {
+		position: relative;
+		margin: auto;
+		width: 90%;
+		max-width:900px;
+	}
+	.modal-content img{
+		width:100%;
+	}
+		
+	/*single image clickable*/
+	.single img{
+		display: block;
+		margin-left: auto;
+		margin-right: auto;
+		width:80%;
+		height:320px;
+		object-fit: cover;
+	}
+}
+
+
+
 .row_lightbox > .column_lightbox {
   padding: 1% 1%;
 }
@@ -8,38 +120,7 @@
   clear: both;
 }
 
-.column_lightbox {
-  float:left;
-  width: 48%;
-}
 
-.column_thumbnail {
-  float:left;
-}
-
-/* The Modal (background) */
-.modal {
-  display: none;
-  position: fixed;
-  z-index: 1;
-  padding-top: 100px;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  overflow: auto;
-  background-color: black;
-}
-
-/* Modal Content */
-.modal-content {
-  position: relative;
-  background-color: #fefefe;
-  margin: auto;
-  padding: 0;
-  width: 90%;
-  max-width: 1200px;
-}
 
 /* The Close Button */
 .close {
@@ -57,11 +138,11 @@
   text-decoration: none;
   cursor: pointer;
 }
-
 /* Hide the slides by default */
 .mySlides {
   display: none;
 }
+
 
 /* Next & previous buttons */
 .prev,
@@ -102,30 +183,7 @@
   top: 0;
 }
 
-/* Caption text */
-.caption-container {
-  text-align: center;
-  background-color: black;
-  padding: 2px 16px;
-  color: white;
-}
 
-img.demo {
-	width:25%;
-  opacity: 0.6;
-}
 
-.active,
-.demo:hover {
-  opacity: 1;
-}
 
-img.hover-shadow {
-	
-	width:100%;
-  transition: 0.3s;
-}
 
-.hover-shadow:hover {
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-}
