--- a/css/lightbox.css
+++ b/css/lightbox.css
@@ -10,43 +10,44 @@ img.hover-shadow {
 	transition: 0.3s;
 }
 
+/* Modal Content */
+.modal-content {
+	position: relative;
+	margin: auto;
+	width: 90%;
+	max-width:900px;
+}
+.modal-content img{
+	width:100%;
+}
+/* The Modal (background) */
+.modal {
+	display: none;
+	position: fixed;
+	z-index: 1;
+	left: 0;
+	top: 0;
+	width: 100%;
+	height: 100%;
+	overflow: auto;
+	background-color: black;
+}
+.column_lightbox {
+	float:left;
+	width: 48%;
+}
+
 
 @media screen 
   and (min-width: 1081px) {
-	.column_lightbox {
-		float:left;
-		width: 48%;
-	}
 	.column_lightbox img{
-		height: 250px;
+		height: 275px;
 		object-fit: cover;
 	}
-		
 	/* The Modal (background) */
 	.modal {
-		display: none;
-		position: fixed;
-		z-index: 1;
 		padding-top: 2.5%;
-		left: 0;
-		top: 0;
-		width: 100%;
-		height: 100%;
-		overflow: auto;
-		background-color: black;
 	}
-
-	/* Modal Content */
-	.modal-content {
-		position: relative;
-		margin: auto;
-		width: 90%;
-		max-width:900px;
-	}
-	.modal-content img{
-		width:100%;
-	}
-		
 	/*single image clickable*/
 	.single img{
 		display: block;
@@ -59,44 +60,16 @@ img.hover-shadow {
 }
 
 
-
 @media screen 
   and (max-width: 1080px) {
-	.column_lightbox {
-		float:left;
-		width: 48%;
-	}
-
 	.column_lightbox img{
-		height: 175px;
+		height: 200px;
 		object-fit: cover;
 	}
-		
 	/* The Modal (background) */
 	.modal {
-		display: none;
-		position: fixed;
-		z-index: 1;
 		padding-top: 12%;
-		left: 0;
-		top: 0;
-		width: 100%;
-		height: 100%;
-		overflow: auto;
-		background-color: black;
 	}
-
-	/* Modal Content */
-	.modal-content {
-		position: relative;
-		margin: auto;
-		width: 90%;
-		max-width:900px;
-	}
-	.modal-content img{
-		width:100%;
-	}
-		
 	/*single image clickable*/
 	.single img{
 		display: block;
@@ -104,6 +77,27 @@ img.hover-shadow {
 		margin-right: auto;
 		width:80%;
 		height:320px;
+		object-fit: cover;
+	}
+}
+
+@media screen 
+  and (max-width: 600px) {
+	.column_lightbox img{
+		height: 150px;
+		object-fit: cover;
+	}
+	/* The Modal (background) */
+	.modal {
+		padding-top: 12%;
+	}
+	/*single image clickable*/
+	.single img{
+		display: block;
+		margin-left: auto;
+		margin-right: auto;
+		width:80%;
+		height:250px;
 		object-fit: cover;
 	}
 }
