--- a/css/default_style.css
+++ b/css/default_style.css
@@ -124,14 +124,13 @@ header li{
 header a{
   color:#ffffff;
   text-decoration: none;
-  text-transform:uppercase;
-  font-size:16px;
+  font-size:18px;
   margin-bottom:1px;
 }
 
 header .highlight, header .current a{
   color:#039fa3;
-  font-weight:bold;
+  font-weight:bolder;
 }
 
 header a:hover{
