--- a/css/lightbox.css
+++ b/css/lightbox.css
@@ -14,12 +14,12 @@ img.hover-shadow {
 .modal-content {
 	position: relative;
 	margin: auto;
-	width: 90%;
-	max-width:900px;
+	width: 100%;
+	height:100%;
 }
 .modal-content img{
+	max-height: 100%;
 	max-width:100%;
-	max-height:100%;
 }
 /* The Modal (background) */
 .modal {
@@ -31,7 +31,7 @@ img.hover-shadow {
 	width: 100%;
 	height: 100%;
 	overflow: auto;
-	background-color: black;
+	background-color: white;
 }
 .column_lightbox {
 	float:left;
@@ -119,7 +119,7 @@ img.hover-shadow {
 
 /* The Close Button */
 .close {
-  color: white;
+  color: gray;
   position: absolute;
   top: 10px;
   right: 25px;
