--- a/css/showcase_about.css
+++ b/css/showcase_about.css
@@ -30,7 +30,8 @@
   /* intro */
   #intro {
     padding:2% 5% 2% 0%;
-    font-size:18px;
+		font-weight:normal;
+    font-size:20px;
     text-align: justify;
   }
 	#showcase .big{
@@ -58,10 +59,14 @@
   }
   /* intro */
   #intro {
-    padding:2% 6% 2% 0%;
+    padding:2% 3% 2% 0%;
     font-size:16px;
     text-align: justify;
   }
+	br {
+   display: block;
+   margin: 1px 0;
+		}
 	#showcase .big{
 		width:100%;
 		height:400px;
