--- a/css/lightbox.css
+++ b/css/lightbox.css
@@ -14,12 +14,12 @@ img.hover-shadow {
 .modal-content {
 	position: relative;
 	margin: auto;
-	width: 100%;
-	height:100%;
+	width: 90%;
+	max-width:900px;
 }
 .modal-content img{
-	max-height: 100%;
 	max-width:100%;
+	max-height:100%;
 }
 /* The Modal (background) */
 .modal {
